@@ -87,7 +87,6 @@ class TestGemCommandsSpecificationCommand < RubyGemTestCase
 
     assert_match %r|\A--- !ruby/object:Gem::Specification|, @ui.output
     assert_match %r|name: foo|, @ui.output
-    assert_equal "WARNING:  Remote information is not complete\n\n", @ui.error
   end
 
 end
